fix: search-result error modal not showing

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -10,6 +10,7 @@
 	background-color: var(--red-color-500);
 	color: white;
 	z-index: 10;
+	box-shadow: 0 4px 5px 5px rgba(0, 0, 0, 0.3);
 
 	&__message {
 		min-height: 100%;
@@ -29,28 +30,29 @@
 
 	&__btn {
 		position: absolute;
-		bottom: 0;
+		bottom: -10rem;
 		left: 20%;
 		font: {
 			family: Arimo;
 			weight: 600;
 		}
-		transform: translateY(10.2rem);
+		transform: translateY(1rem);
 
 		&:hover {
-			box-shadow: 0 2px 2px 4px rgba(0, 0, 0, 0.2);
+			box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 
 			&:active {
 				box-shadow: none;
+				transform: translate(0);
 			}
 		}
 	}
 }
 
 .success {
-	background-color: var(--green-color-700);
+	background-color: var(--green-color-600);
 }
 
 .error {
-	background-color: var(--red-color-800);
+	background-color: var(--red-color-600);
 }
